--- a/templates/article/index_member.html
+++ b/templates/article/index_member.html
@@ -1,89 +1,16 @@
-{% extends "article/base.html" %}
+{% extends "article/index.html" %}
 
-{% block title %}
-    Liste des articles
-{% endblock %}
-
-{% block meta %}
-    <meta name="description" content="Les articles sont rédigés par la
-    communauté ; ils permettent aussi bien de se tenir informé des dernières
-    innovations du moment que de découvrir de nouvelles notions liées aux
-    différents domaines de l'informatique." />
-{% endblock %}
-
-{% block header %}
-    <h1>
-        <i class="icon-file-text icon-large"></i>
-        Articles
-    </h1>
-    <p>
-        Les articles sont rédigés par la communauté ; ils permettent aussi bien de <strong>se tenir informé des dernières innovations</strong> du moment
-        que de <strong>découvrir de nouvelles notions</strong> liées aux différents domaines de l'informatique.
-    </p>
-{% endblock %}
-
-{% block headline %}
-    Liste des articles
-{% endblock %}
-
-{% block breadcrumb %}
-    <li class="current"><a href="#">Index</a></li>
-{% endblock %}
-
-{% block headline-actions %}
-    <div class="button-group">
-
-        <a href="#" class="button secondary dropdown" data-dropdown="articles-drop-feeds">Flux</a><br />
-        <ul id="articles-drop-feeds" class="f-dropdown">
-            <li><a href="{% url "article-feed-rss" %}">Nouveaux articles (RSS)</a></li>
-            <li><a href="{% url "article-feed-atom" %}">Nouveaux articles (ATOM)</a></li>
-            {% if user.is_authenticated %}
-            <li><a href="{% url "zds.article.views.new" %}">Nouvel article</a></li>
+{% block headline-actions-filter %}
             <h3><span class="wide">Filtres</span></h3>
             <li><a href="{% url "zds.member.views.articles" %}">All</a></li>
             <li><a href="{% url "zds.member.views.articles" %}?type=public">Public</a></li>
             <li><a href="{% url "zds.member.views.articles" %}?type=draft">Draft</a><li>
-            {% endif %}
-        </ul>
-
-    </div>
 {% endblock %}
 
-{% block content %}
-
-<div class="row">
-    <div class="large-12 columns">
-        {% if articles %}
-            <div class="article-items">
-                {% for article in articles %}
-                <div class="row article-publication-item">
-                    <div class="large-1 columns">
-                        {% if article.thumbnail %}
-                            <img src="{{article.thumbnail.url }}"/>
-                        {% endif %}
-                    </div>
-                    <div class="large-10 columns">
+{% block content-filter %}
                         {% if type = 'draft' and article.is_draft %}
                             <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                         {% else %}
                             <a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a>
                         {% endif %}
-                        <p>{{ article.description }}</p>
-                    </div>
-                    <div class="large-1 columns">
-                        <div class="date-box">
-                            {% with date=article.pubdate %}
-                                {% include "misc/datebox.part.html" %}
-                            {% endwith %}
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        {% else %}
-            <p>Aucun article disponible.</p>
-        {% endif %}
-    </div>
-</div>
-
 {% endblock %}
